# MoMEMta

./: CMakeLists.txt
MatrixElements/pp_hh_bbbb/: CMakeLists.txt
MatrixElements/pp_hh_bbbb/SubProcesses/P1_Sigma_SMEFT_FF_2_gg_bbxbbx/: P1_Sigma_SMEFT_FF_2_gg_bbxbbx.cc  P1_Sigma_SMEFT_FF_2_gg_bbxbbx.h
MatrixElements/pp_hh_bbbb/include/: HelAmps_SMEFT_FF_2.h  Parameters_SMEFT_FF_2.h  SubProcess.h  coupl.inc
MatrixElements/pp_hh_bbbb/src/: HelAmps_SMEFT_FF_2.cc  Parameters_SMEFT_FF_2.cc  VVS2_3.f  VVSS2_0.f  VVSS3_0.f
core/src/: Graph.cc  Math.cc
examples/: HH_bbbb.cc  HH_bbbb.lua
modules/: BlockF.cc  EmptyModule.cc  MatrixElement.cc
tests/: CMakeLists.txt
tests/crossSections/: blockD_ttx_dilep.cc
